# splitwise-mcp-server

./: .dockerignore  .env.example  .env.oauth  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  debug_fetch.rs  docker-compose.traefik.yml  docker-compose.yml  list_categories.sh  test_category_filter.sh  test_direct.rs  test_mcp.sh  test_tool.sh  test_update.json  test_update_expense.sh
.github/workflows/: docker-build.yml
src/: main.rs  main_http.rs  main_simple.rs  splitwise.rs  test_api.rs  tools.rs  types.rs
